syntax = "proto3";

import "ProtoUtil.proto";

option java_package = "protos";
option csharp_namespace = "myGrpc";

package Protos;

message gItem {
  int32 Id = 1;
  string itemName = 2;
  double length = 3;
  double width = 4;
  double height = 5;
  double weight = 6;
}

message gItemList {
  repeated gItem item = 1;
}

message gItemId{
  int32 ItemId = 1;
}


service ItemService {
  rpc RegisterItem(gItem) returns (gItem);
  rpc GetItem(gItemId) returns (gItem);
  rpc GetAllItems(gItem) returns (gItemList);
  rpc UpdateItem(gItem) returns (gItem);
  rpc RemoveItem(gItemId) returns (gBoolValue);
}