syntax = "proto3";

option java_package = "protos";
option csharp_namespace = "myGrpc";

package Protos;

message UserDetails {
  string Username = 1;
  string Password = 2;
  string Role = 3;
  int32 SecurityLevel = 4;
}

service UserService {
  rpc login (UserDetails) returns (UserDetails);
  rpc logout (UserDetails) returns (UserDetails);
}